popup form added

--- a/app/styles/app.sass
+++ b/app/styles/app.sass
@@ -17,10 +17,12 @@
 
 // // Main style
 @import "base/main"
+@import "../libs/magnific-popup/dist/magnific-popup.scss"
 
 // // Blocks
 @import "../blocks/header/header"
 @import "../blocks/content/content"
+@import "../blocks/form/form"
 @import "../blocks/footer/footer"
 
 // // Media queries
