--- a/app/blocks/content/content.jade
+++ b/app/blocks/content/content.jade
@@ -5,7 +5,10 @@ section.content
 				.join
 					h2.join-text Join our webinar
 					p.join-date april 19 // 6:00 &amp; 15:00 gmt
-					a.join-sign(href="") <b>Sign</b> me up
+					a.join-sign(href="#form") <b>Sign</b> me up
+
+					include ../form/form
+
 			h1.title How to turn your existing content into interactive digital assets
 			h3.discr Enrich easily and distribute<br> in various ways
 			ul.social-wrap
