--- a/app/styles/base/media.sass
+++ b/app/styles/base/media.sass
@@ -52,6 +52,13 @@
 		font-size: 12px
 	.header
 		font-size: 10px
+	form
+		width: 19em
+		padding: 1.2em 1em 1em
+		.input-group
+			display: block
+			padding: 0
+			width: 100%
 
 @media only screen and (max-width : 440px)
 	.header
