added send form on php

--- a/app/blocks/content/content.jade
+++ b/app/blocks/content/content.jade
@@ -5,7 +5,7 @@ section.content
 				.join
 					h2.join-text Join our webinar
 					p.join-date april 19 // 6:00 &amp; 15:00 gmt
-					a.join-sign(href="#form") <b>Sign</b> me up
+					a.join-sign(href="#form", rel="nofollow") <b>Sign</b> me up
 
 					include ../form/form
 
@@ -13,14 +13,14 @@ section.content
 			h3.discr Enrich easily and distribute<br> in various ways
 			ul.social-wrap
 				li.social-item
-					a.social-link(href="")
+					a.social-link(href="", rel="nofollow", target="blank")
 						+icon('yt')
 				li.social-item
-					a.social-link(href="")
+					a.social-link(href="", rel="nofollow", target="blank")
 						+icon('tw')
 				li.social-item
-					a.social-link(href="")
+					a.social-link(href="", rel="nofollow", target="blank")
 						+icon('in')
 				li.social-item
-					a.social-link(href="")
+					a.social-link(href="", rel="nofollow", target="blank")
 						+icon('fb')
