--- a/app/blocks/form/form.sass
+++ b/app/blocks/form/form.sass
@@ -4,6 +4,8 @@ form
 	margin: 0 auto
 	padding: 1.8em 1em
 	background-color: $main
+	color: $black
+	text-align: left
 	.input-group
 		display: inline-block
 		width: 50%
@@ -44,4 +46,13 @@ form
 		border: none
 		padding: 0.5em 2em
 		margin-top: 0.9em
+	
+.note
+	width: 100%
+.note-error
+	padding: 1em
+	border: 1px solid $red
+	color: $black
+	margin-top: 0.9em
+
 
