fixed full width

--- a/app/blocks/content/content.sass
+++ b/app/blocks/content/content.sass
@@ -1,13 +1,15 @@
 .content
-	background: url('../img/content-bg.jpg') no-repeat center
+	background: url('../img/content-bg.jpg') no-repeat center -2em 
 	background-size: cover
+	height: calc(100vh - 5.3em)
+	padding-bottom: 2.1em
 .landing-content
 	padding: 2.8em 0 0.5em
 	text-align: center
 	width: 22em
 
 .join-wrap
-	// padding: 0 1em
+
 .join
 	text-transform: uppercase
 	border-top: 2px solid $green
