--- a/app/blocks/mixins.jade
+++ b/app/blocks/mixins.jade
@@ -1,4 +1,4 @@
-//- SVG iconcfrom sprite.svg
+//- SVG icon from sprite.svg
 mixin icon(iconName)
 	svg(class='i-' + iconName)
 		use(xlink:href='/assets/img/sprite.svg#i-#{iconName}')
