--- a/app/styles/base/main.sass
+++ b/app/styles/base/main.sass
@@ -1,14 +1,16 @@
 
 .wrapper
 	position: relative
-	overflow-x: hidden
+	overflow: hidden
 	min-width: 320px
+	width: 1920px
+	margin: auto
 	color: $main
-	font-size: 40px
+	font-size: 35px
 	font-family: 'Open Sans Bold', sans-serif
 
 .container
-	width: 1612px
+	width: 1580px
 	margin: auto
 
 svg
