--- a/app/blocks/footer/footer.sass
+++ b/app/blocks/footer/footer.sass
@@ -1,6 +1,7 @@
 .footer
 	background-color: $green
 	min-height: 2.1em
+	margin-top: -2.1em
 .footer-link
 	display: inline-block
 	font-size: 0.8em
