--- a/app/styles/base/media.sass
+++ b/app/styles/base/media.sass
@@ -1,43 +1,78 @@
 
-/*==========  Desktop First Method  ==========*/
-/* Medium Devices, Desktops */
+@media only screen and (max-width : 2000px)
+	.wrapper
+		font-size: 30px
+		width: 1600px
+	.container
+		width: 1403px
 @media only screen and (max-width : 1650px)
 	.wrapper
-		font-size: 33px
+		font-size: 26px
+		width: 1350px
 	.container
-		width: 1375px
+		width: 1140px
 @media only screen and (max-width : 1500px)
 	.wrapper
-		font-size: 31px
+		font-size: 23px
+		width: 1200px
 	.container
-		width: 1250px
+		width: 991px
+@media only screen and (max-width : 1350px)
+	.wrapper
+		font-size: 21px
+		width: 1100px
+	.container
+		width: 920px
 @media only screen and (max-width : 1200px)
-	.container
-		width: 1000px
 	.wrapper
-		font-size: 24px
-@media only screen and (max-width : 1000px)
+		font-size: 18px
+		width: 950px
 	.container
-		width: 833px
+		width: 830px
+
+@media only screen and (max-width : 1050px)
 	.wrapper
+		font-size: 17px
+		width: 100%
+	.container
+		width: 80%
+	.landing-content
 		font-size: 20px
-@media only screen and (max-width : 820px)
+@media only screen and (max-width : 1050px)
 	.container
-		width: 683px
+		width: 90%
+
+@media only screen and (max-width : 780px) and (orientation: landscape)
+	.content
+		height: auto
+		padding-bottom: 0
+		background: url('../img/content-bg.jpg') no-repeat center
+	.footer
+		margin-top: 0
+
+@media only screen and (max-width : 770px)
 	.wrapper
 		font-size: 16px
-
-@media only screen and (max-width : 660px)
 	.container
 		width: 100%
-	.wrapper
-		font-size: 13px
-	.header
-		text-align: center
-	.content
-		background: url('../img/content-bg-mobile.jpg') no-repeat bottom
 	.landing-content
 		margin: auto
+	.content
+		background: url('../img/content-bg-mobile.jpg') no-repeat bottom
+		background-size: cover
+
+@media only screen and (max-height : 775px) and (min-height: 500px) and (orientation: portrait)
+	.landing-content
+		padding-top: 5em
+@media only screen and (max-height : 770px) and (orientation: portrait)
+	form
+		font-size: 13px
+
+@media only screen and (max-width : 660px)
+	.wrapper
+		font-size: 14px
+	.header
+		text-align: center
 	.footer
 		text-align: center
 	.footer-link
@@ -52,9 +87,13 @@
 		font-size: 12px
 	.header
 		font-size: 10px
+	.landing-content
+		font-size: 18px
+	.content
+		background-size: auto
 	form
-		width: 19em
 		padding: 1.2em 1em 1em
+		width: 100%
 		.input-group
 			display: block
 			padding: 0
@@ -66,4 +105,9 @@
 		text-align: center
 		.logo2
 			margin: 0 2em
+	.landing-content
+		font-size: 14px
 
+@media only screen and (max-width : 320px) and (orientation: portrait)
+	form
+		font-size: 10px
