--- a/app/blocks/form/form.sass
+++ b/app/blocks/form/form.sass
@@ -46,6 +46,9 @@ form
 		border: none
 		padding: 0.5em 2em
 		margin-top: 0.9em
+		transition: background 0.3s
+		&:hover
+			background-color: $red
 	
 .note
 	width: 100%
