--- a/app/blocks/footer/footer.sass
+++ b/app/blocks/footer/footer.sass
@@ -7,6 +7,9 @@
 	font-size: 0.8em
 	letter-spacing: 1px
 	padding: 0.8em 7.3em 0
+	transition: all 0.2s
+	&:hover
+		text-decoration: underline
 .footer-copy
 	display: inline-block
 	font-family: 'Open Sans Light', sans-serif
