--- a/app/blocks/layout.jade
+++ b/app/blocks/layout.jade
@@ -5,7 +5,7 @@ html(lang="ru")
 	head
 		meta(charset='utf-8')
 		meta(name="description" content="")
-		meta(name='viewport' content='width=device-width, initial-scale=1, maximum-scale=1, minimal-ui')
+		meta(name='viewport' content='width=device-width, initial-scale=1, maximum-scale=1')
 		meta(http-equiv='X-UA-Compatible' content='IE=edge')
 
 		block head
